--- a/manifest.json
+++ b/manifest.json
@@ -14,13 +14,13 @@
     },
     "web_accessible_resources": [
         {
-            "resources": ["favicon.svg", "icons/*.png"],
+            "resources": ["icons/*.png"],
             "matches": ["<all_urls>"]
         }
     ],
     "content_security_policy": {
-        "extension_pages": "script-src 'self'; object-src 'self'; img-src 'self' https://www.google.com https://icons.duckduckgo.com https: data:;"
+        "extension_pages": "script-src 'self'; object-src 'self'; img-src 'self' https://www.google.com https://icons.duckduckgo.com data:;"
     },
-    "author": "AquaWave Team",
-    "homepage_url": "https://github.com/yourusername/aquawave-theme"
+    "author": "Sourav Dutta",
+    "homepage_url": "https://github.com/dsouravcom/aquawave-ext"
 }
